- Fix a 64-bit sign-extension vs zero-extension crash.
- Fix an action0 with no IDs caused a hang of NFORenum.
- Fix the error message "A portion of sprite xx could not be processed."
  reported the sprite before the one with the error.
- Fix a warning on newobject's buy menu sprite cargo type.
- Fix warning message about exceeded limits of bounding boxes.
- Remove warning 135 (first sprite cannot share bounding box with
  previous sprite) as it's no longer a valid warning since both openttd
  and ttdpatch support multiple ground sprites
- Make -w/-W <list> work the way it is supposed to.
- Make NFO error/warning messages go to stderr.
- Allow the beautifier to output escape sequences.
- Allow extended byte IDs in actions 3 and 4.
- Allow hex escapes that have bit 31 set.
- Allow bit 7 of the operation byte to be set when reading patch
  variables and other GRF parameters in action D.
- 0.dat can now specify that certain properties may exist multiple
  times in an action 0.
- Check action 3s for cargos that are specified twice.
- Add escapes for the new action 2 operations 12, 13, 14, 15 and 16.
- Support bridge IDs 0B and 0C.
- Support random 2 type 84.
- Support string codes 9A 06, 9A 07, 9A 08, 9A 0B, 9A 0C.
- Support action 7/9 condition types 0D and 0E.
- Support action 14.
- (devel) Can no longer build without boost.
- (devel) Detect UPX and make strip optional.
- (devel) Race and bash-ism issues with the Makefile.
- (devel) Fix numerous compile warnings and harden NFORenum.

v3.4.5 to v3.4.6 (r1795)
- Data file updates:
  - Industry texts may have arbitrary text-stack data.
  - Action D patch variable 11.
  - Action 5 types 0F..12.
  - Action 5 type 07 takes 75 sprites.
  - Languages: Esperanto, Bulgarian, Japanese, Korean
  - House property 1F, 20.
  - Canal properties 08, 09.
  - Canal IDs 05..07.
  - Industry variables 44, 45, 68.
  - Mark variable 81 as readable in actions 7 and D.
  - Text IDs F945..F95F.
  - Adv. action 2 ops 11..13